------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

January 19 2003 Timo Kiviluoto <heikki.sairanen@phpoint.net>

	* Explosions are now stopped by walls
	* Added PLAYER macro which expands to game::GetPlayer()
	* Removed the 3 letter limit of DefaultName, too

January 19 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Fountains should never give permanent lycanthropy-state.
	* Nefas shouldn't confuse plants. (maybe they should hit randomly characters around them)
	* Healing should be terminated if player enters faint state.
	* Remove the 3 letter limit for names.
	* Amulet of Life saving generates high score entry.
	
January 18 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Lycanthropy cannot be randomly activated anymore. 
	
January 18 2003 Timo Kiviluoto <heikki.sairanen@phpoint.net>

	* Corrected some bugs in the Win SDL port
	* The DOS port compiles again
	* Compiling is now twice as fast as before
	* Monoheaded and two two-headed mooses and two giant mushrooms added to char.pcx
	  by Kahvi
	* Breaking and fixing an item no longer destroys accustomization
	* Something that I forgot

January 18 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Smith now fixes damaged bodyparts if they are made from a metal
	* Bug with highscores corrected (makefiles)
	* CanThrow added to script
	* Handling Home,save and data directories changed
	* chameleon whip added
	* whip of thievery can be cloned

January 9 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Fixed a bug that sometimes prevented Haedlac from being teleported to aid
	  Petrus ere the final battle
	* Removed bulimia damage type
	* Greatly optimized the creation of sparkling and lightning-shooting objects