@@ -135,3 +135,4 @@ The bad pray effect of Sophos can sometimes leave the player in a state where he
 //Hitting imperialists palm waving slaves causes no real action on the behalf of the imperialist.
 (s) Putting mines in Attnam is considered OK by guards.
 Amulet of Life saving generates high score entry.
+Offering chests in prohibited. (They are too important according to the game)
