@@ -4,9 +4,9 @@
 (r) rejected
 (s) suspended
 
-Fountains should never give permanent lycanthropy-state.
-Nefas shouldn't confuse plants. (maybe they should hit randomly characters around them)
-Healing should be terminated if player enters faint state.
+//Fountains should never give permanent lycanthropy-state.
+//Nefas shouldn't confuse plants. (maybe they should hit randomly characters around them)
+//Healing should be terminated if player enters faint state.
 Attavus' bodypart fix doesn't work
 Odd message: "The greater carnivorous plant looks faster"
 Entering a dungeon and loading an autosave saves some time.
@@ -16,6 +16,6 @@ Skeletons are probably seen by infravision.
 Golden plate mails are worth less than iron ones.
 Wishing improvements
 It seems that due to certain bitshift rounding errors, resting causes more exp minus than pressing the NOP key.
-Remove the 3 letter limit for names.
-Amulet of Life saving generates high score entry.
+//Remove the 3 letter limit for names.
+//Amulet of Life saving generates high score entry.
 Explosions should be stopped by walls.
