@@ -7,6 +7,11 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+January 23 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Eating in cathedral and shop prohibited again (I found or made and found this bug)
+	* Kicking items in certain rooms requires saying Yes to a bool question. 
+
 January 19 2003 Timo Kiviluoto <heikki.sairanen@phpoint.net>
 
 	* Explosions are now stopped by walls
